...
  const [pressed, setPressed] = React.useState(false);
  return (
    <Pressable
      onPress={onPress}
      onPressIn={() => setPressed(true)}
      onPressOut={() => setPressed(false)}
      testID="home-artist"
      style={{ width: size }}
    >
      <View
        style={[
          styles.artistRing,
          { width: size - 6, height: size - 6 },
...
