...
                  dim
                  onPress={onClose}
                />
              ) : (
                <Action
                  icon={downloaded ? 'checkmark-circle' : 'arrow-down-circle-outline'}
                  label={downloaded ? 'Downloaded' : 'Download'}
                  dim={downloaded}
                  onPress={() => {
                    if (downloaded) {
                      onClose();
                      return;
                    }
...
